# solar-analyzer-tauri

frontend/: .gitignore  Cargo.toml  index.html
frontend/public/: _variables.scss  glue.js  index.scss
frontend/public/css-components/: _graph.scss  _graph_copypaste.scss  _litepicker.scss  _main_content.scss  _main_layout.scss  _modal_window.scss  _notification.scss  _sidebar.scss  _sidemenu.scss  _svg.scss  _switch.scss
frontend/src/: app_state.rs  bindings.rs  component.rs  component_channel.rs  main.rs
frontend/src/component/: control.rs  file_handling.rs  graph_handling.rs  message_handling.rs  visual.rs
frontend/src/component/control/: button.rs  channel.rs  channel_checkbox.rs  copy_paste.rs  duplicator.rs  modal_window.rs  shared_data_context.rs  switch.rs
frontend/src/component/file_handling/: file_select.rs
frontend/src/component/graph_handling/: graph.rs  graph_state.rs
frontend/src/component/graph_handling/graph/: graph_coordination.rs  graph_draw.rs  graph_draw_utils.rs  secondary_y_axis_controls.rs  time_range_controls.rs  x_axis_controls.rs  y_axis_controls.rs
frontend/src/component/message_handling/: message_box.rs  simple_message.rs
frontend/src/component/visual/: general_props.rs  sidebar.rs  sidemenu.rs  svg.rs  theme_data.rs
frontend/src/component/visual/svg/: close_button.rs  cog.rs  file_upload.rs
shared/: Cargo.toml
shared/src/: graph.rs  lib.rs  parse.rs  solar_data.rs  types.rs
shared/src/graph/: graph_axis.rs  graph_state_request.rs  graph_type.rs
shared/src/parse/: live_data.rs  parse_error.rs  stored_data.rs  traits.rs  utils.rs  version.rs
shared/src/solar_data/: cell.rs  controllers.rs  line.rs  storage.rs  value.rs
shared/src/types/: fixed_size_queue.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
