[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = {path = "../shared"}
js-sys = "0.3.61"
plotters = "0.3.4"
tracing = "0.1.37"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = ["FileList", "HtmlInputElement", "HtmlElement", "Event", "EventTarget"] }
yew = { version = "0.20.0", features = ["csr"] }
serde-wasm-bindgen = "0.5.0"
serde = "1.0.163"
