[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = {path = "../shared"}
js-sys = "0.3.61"
plotters = "0.3.4"
tracing = "0.1.37"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = ["FileList", "HtmlInputElement", "HtmlElement", "Event", "EventTarget", "CustomEvent"] }
yew = { version = "0.20.0", features = ["csr"] }
serde-wasm-bindgen = "0.5.0"
serde = "1.0.163"
plotters-canvas = "0.3.0"
gloo-events = "0.1.2"
time = "0.3.22"
serde_json = "1.0.103"
thiserror = "1.0.44"
